Reduce use of z-index so header items appear naturally. Fix display of secondary menu in pop-up menu

--- a/css/style.css
+++ b/css/style.css
@@ -6875,14 +6875,6 @@ body #admin-menu .dropdown li {
     padding-left: 0;
   }
 }
-ul.secondary {
-  float: left;
-}
-@media screen and (min-width: 768px) {
-  ul.secondary {
-    float: right;
-  }
-}
 .page-header {
   margin-top: 0;
 }
@@ -7336,7 +7328,7 @@ table .checkbox input[type="checkbox"] {
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: white;
+  background-color: transparent;
   width: 100%;
 }
 .navbar-default p {
@@ -7387,7 +7379,7 @@ table .checkbox input[type="checkbox"] {
   top: 0;
   right: 0;
   opacity: .8;
-  z-index: 2;
+  z-index: 1;
 }
 .navbar-default .primary-nav {
   background-color: #df0000;
@@ -7496,12 +7488,12 @@ table .checkbox input[type="checkbox"] {
 }
 .navbar-default .navbar-toggle {
   margin: 0;
-  z-index: 3;
+  z-index: 2;
+  background-color: white;
 }
 .front .hero {
-  background: rgba(0, 0, 0, 0) url("/sites/all/themes/reaching/IMG-20140407-130438-1600x900.jpg") repeat scroll 50% 50%;
+  background: rgba(0, 0, 0, 0) url("/sites/all/themes/reaching/20170512-090200-1600x900.jpg") repeat scroll 50% 50%;
   background-size: cover;
-  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
