--- a/less/header.less
+++ b/less/header.less
@@ -11,7 +11,7 @@
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: white;
+  background-color: transparent;
   width: 100%;
 
   p {
@@ -62,7 +62,7 @@
     top: 0;
     right: 0;
     opacity: .8;
-    z-index: 2;
+    z-index: 1;
   }
 
   .primary-nav {
@@ -162,15 +162,15 @@
 
   .navbar-toggle {
     margin: 0;
-    z-index: 3;
+    z-index: 2;
+    background-color: white;
   }
 }
 
 .front {
   .hero {
-    background: rgba(0, 0, 0, 0) url("/sites/all/themes/reaching/IMG-20140407-130438-1600x900.jpg") repeat scroll 50% 50%;
+    background: rgba(0, 0, 0, 0) url("/sites/all/themes/reaching/20170512-090200-1600x900.jpg") repeat scroll 50% 50%;
     background-size: cover;
-    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
