--- a/less/overrides.less
+++ b/less/overrides.less
@@ -153,14 +153,6 @@ body {
   }
 }
 
-// Navigation.
-ul.secondary {
-  float: left;
-  @media @tablet {
-    float: right;
-  }
-}
-
 // Page header.
 .page-header {
   margin-top: 0;
